thêm tiền thủ thuật + tiền khám

--- a/src/main/resources/templates/transaction/create/index.html
+++ b/src/main/resources/templates/transaction/create/index.html
@@ -122,28 +122,38 @@ License: You must have a valid license purchased only from themeforest(the above
                                             </div>
                                         </div>
                                         <div class="row">
-                                            <div class="col-lg-6">
+                                            <div class="col-lg-3">
                                                 <label>Thủ thuật</label>
                                                 <input type="text" class="form-control material-input" readonly
                                                     id="cusPros" data-toggle="modal" data-target="#kt_select2_modal"
                                                     data-backdrop="static" data-keyboard="false">
                                             </div>
-                                            <div class="col-lg-6">
+                                            <div class="col-lg-3">
+                                                <label>Tiền thủ thuật</label>
+                                                <input type="text" class="form-control material-input" readonly
+                                                    id="expProcMoney">
+                                            </div>
+                                            <div class="col-lg-3">
                                                 <label>Thuốc</label>
                                                 <input type="text" class="form-control material-input" readonly
                                                     id="medicine" data-toggle="modal" data-target="#kt_modal_1"
                                                     data-backdrop="static" data-keyboard="false">
                                             </div>
+                                            <div class="col-lg-3">
+                                                <label>Thuốc</label>
+                                                <input type="text" class="form-control material-input" readonly
+                                                    id="expMedicineMoney">
+                                            </div>
 
                                         </div>
                                         <div class="row">
                                             <div class="col-lg-4">
-                                                <label>Tiền Thủ thuật</label>
+                                                <label>Thu tiền Thủ thuật</label>
                                                 <input type="text" class="form-control material-input money-input"
                                                     id="moneyPro">
                                             </div>
                                             <div class="col-lg-4">
-                                                <label>Tiền Thuốc</label>
+                                                <label>Thu tiền Thuốc</label>
                                                 <input type="text" class="form-control material-input money-input"
                                                     id="moneyMec">
                                             </div>
