update giao diện lượt khám

--- a/src/main/resources/templates/transaction/create/index.html
+++ b/src/main/resources/templates/transaction/create/index.html
@@ -140,7 +140,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                                     data-backdrop="static" data-keyboard="false">
                                             </div>
                                             <div class="col-lg-3">
-                                                <label>Thuốc</label>
+                                                <label>Tiền thuốc</label>
                                                 <input type="text" class="form-control material-input" readonly
                                                     id="expMedicineMoney">
                                             </div>
@@ -230,7 +230,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                                     value="0">
                                             </td>
                                             <td>
-                                                Lọ
+                                                <input type="text" class="form-control material-input" id="unitLo">
                                             </td>
                                             <td>
                                                 <input type="text" class="form-control material-input money-input" id="priceLo"
