--- a/src/main/resources/templates/transaction/edit/index.html
+++ b/src/main/resources/templates/transaction/edit/index.html
@@ -123,17 +123,27 @@ License: You must have a valid license purchased only from themeforest(the above
                                             </div>
                                         </div>
                                         <div class="row">
-                                            <div class="col-lg-6">
+                                            <div class="col-lg-3">
                                                 <label>Thủ thuật</label>
                                                 <input type="text" class="form-control material-input" readonly
                                                     id="cusPros" data-toggle="modal" data-target="#kt_select2_modal"
                                                     data-backdrop="static" data-keyboard="false">
                                             </div>
-                                            <div class="col-lg-6">
+                                            <div class="col-lg-3">
+                                                <label>Tiền thủ thuật</label>
+                                                <input type="text" class="form-control material-input" readonly
+                                                    id="expProcMoney">
+                                            </div>
+                                            <div class="col-lg-3">
                                                 <label>Thuốc</label>
                                                 <input type="text" class="form-control material-input" readonly
                                                     id="medicine" data-toggle="modal" data-target="#kt_modal_1"
                                                     data-backdrop="static" data-keyboard="false">
+                                            </div>
+                                            <div class="col-lg-3">
+                                                <label>Tiền thuốc</label>
+                                                <input type="text" class="form-control material-input" readonly
+                                                    id="expMedicineMoney">
                                             </div>
 
                                         </div>
@@ -209,7 +219,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                                 Thang
                                             </td>
                                             <td>
-                                                <input type="text" class="form-control material-input" id="priceThang"
+                                                <input type="text" class="form-control material-input money-input" id="priceThang"
                                                     value="0">
                                             </td>
                                         </tr>
@@ -219,10 +229,10 @@ License: You must have a valid license purchased only from themeforest(the above
                                                     value="0">
                                             </td>
                                             <td>
-                                                Lọ
+                                                <input type="text" class="form-control material-input" id="unitLo">
                                             </td>
                                             <td>
-                                                <input type="text" class="form-control material-input" id="priceLo"
+                                                <input type="text" class="form-control material-input money-input" id="priceLo"
                                                     value="0">
                                             </td>
                                         </tr>
