--- a/src/main/resources/templates/login/index.html
+++ b/src/main/resources/templates/login/index.html
@@ -14,191 +14,237 @@ License: You must have a valid license purchased only from themeforest(the above
 -->
 <html lang="en">
 
-	<!-- begin::Head -->
-	<head>
-		<base href="../../../">
-		<meta charset="utf-8" />
-		<title>Thọ An Đường | Đăng nhập</title>
-		<meta name="description" content="Login page example">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<!-- begin::Head -->
 
-		<!--begin::Fonts -->
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700|Roboto:300,400,500,600,700">
+<head>
+	<base href="../../../">
+	<meta charset="utf-8" />
+	<title>Thọ An Đường | Đăng nhập</title>
+	<meta name="description" content="Login page example">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-		<!--end::Fonts -->
+	<!--begin::Fonts -->
+	<link rel="stylesheet"
+		href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700|Roboto:300,400,500,600,700">
 
-		<!--begin::Page Custom Styles(used by this page) -->
-		<link href="assets/css/pages/login/login-4.css" rel="stylesheet" type="text/css" />
+	<!--end::Fonts -->
 
-		<!--end::Page Custom Styles -->
+	<!--begin::Page Custom Styles(used by this page) -->
+	<link href="assets/css/pages/login/login-4.css" rel="stylesheet" type="text/css" />
 
-		<!--begin::Global Theme Styles(used by all pages) -->
-		<link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
-		<link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
+	<!--end::Page Custom Styles -->
 
-		<!--end::Global Theme Styles -->
+	<!--begin::Global Theme Styles(used by all pages) -->
+	<link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
+	<link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
 
-		<!--begin::Layout Skins(used by all pages) -->
-		<link href="assets/css/skins/header/base/light.css" rel="stylesheet" type="text/css" />
-		<link href="assets/css/skins/header/menu/light.css" rel="stylesheet" type="text/css" />
-		<link href="assets/css/skins/brand/dark.css" rel="stylesheet" type="text/css" />
-		<link href="assets/css/skins/aside/dark.css" rel="stylesheet" type="text/css" />
+	<!--end::Global Theme Styles -->
 
-		<!--end::Layout Skins -->
-		<link rel="shortcut icon" href="assets/media/logos/favicon.ico" />
-	</head>
+	<!--begin::Layout Skins(used by all pages) -->
+	<link href="assets/css/skins/header/base/light.css" rel="stylesheet" type="text/css" />
+	<link href="assets/css/skins/header/menu/light.css" rel="stylesheet" type="text/css" />
+	<link href="assets/css/skins/brand/dark.css" rel="stylesheet" type="text/css" />
+	<link href="assets/css/skins/aside/dark.css" rel="stylesheet" type="text/css" />
 
-	<!-- end::Head -->
+	<!--end::Layout Skins -->
+	<link rel="shortcut icon" href="assets/media/logos/favicon.ico" />
+</head>
 
-	<!-- begin::Body -->
-	<body class="kt-quick-panel--right kt-demo-panel--right kt-offcanvas-panel--right kt-header--fixed kt-header-mobile--fixed kt-subheader--enabled kt-subheader--fixed kt-subheader--solid kt-aside--enabled kt-aside--fixed kt-page--loading">
+<!-- end::Head -->
 
-		<!-- begin:: Page -->
-		<div class="kt-grid kt-grid--ver kt-grid--root">
-			<div class="kt-grid kt-grid--hor kt-grid--root  kt-login kt-login--v4 kt-login--signin" id="kt_login">
-				<div class="kt-grid__item kt-grid__item--fluid kt-grid kt-grid--hor" style="background-image: url(assets/media/bg/bg-2.jpg);">
-					<div class="kt-grid__item kt-grid__item--fluid kt-login__wrapper">
-						<div class="kt-login__container">
-							<div class="kt-login__logo">
-								<a href="#">
-									<img src="assets/media/logos/logo-5.png">
-								</a>
+<!-- begin::Body -->
+
+<body
+	class="kt-quick-panel--right kt-demo-panel--right kt-offcanvas-panel--right kt-header--fixed kt-header-mobile--fixed kt-subheader--enabled kt-subheader--fixed kt-subheader--solid kt-aside--enabled kt-aside--fixed kt-page--loading">
+
+	<!-- begin:: Page -->
+	<div class="kt-grid kt-grid--ver kt-grid--root">
+		<div class="kt-grid kt-grid--hor kt-grid--root  kt-login kt-login--v4 kt-login--signin" id="kt_login">
+			<div class="kt-grid__item kt-grid__item--fluid kt-grid kt-grid--hor"
+				style="background-image: url(assets/media/bg/bg-2.jpg);">
+				<div class="kt-grid__item kt-grid__item--fluid kt-login__wrapper">
+					<div class="kt-login__container">
+						<div class="kt-login__logo">
+							<a href="#">
+								<img src="assets/media/logos/logo-5.png">
+							</a>
+						</div>
+						<div class="kt-login__signin">
+							<div class="kt-login__head">
+								<h3 class="kt-login__title">Đăng nhập</h3>
 							</div>
-							<div class="kt-login__signin">
-								<div class="kt-login__head">
-									<h3 class="kt-login__title">Đăng nhập</h3>
+							<form class="kt-form" action="">
+								<div class="input-group">
+									<input class="form-control" type="text" placeholder="Email" name="email" id="email"
+										autocomplete="off">
 								</div>
-								<form class="kt-form" action="">
-									<div class="input-group">
-										<input class="form-control" type="text" placeholder="Email" name="email" autocomplete="off">
-									</div>
-									<div class="input-group">
-										<input class="form-control" type="password" placeholder="Password" name="password">
-									</div>
-									<div class="row kt-login__extra">
-										<!-- <div class="col">
+								<div class="input-group">
+									<input class="form-control" type="password" placeholder="Password" id="password" name="password">
+								</div>
+								<div class="row kt-login__extra">
+									<!-- <div class="col">
 											<label class="kt-checkbox">
 												<input type="checkbox" name="remember"> Remember me
 												<span></span>
 											</label>
 										</div> -->
-										<div class="col kt-align-right">
-											<a href="javascript:;" id="kt_login_forgot" class="kt-login__link">Quên mật khẩu</a>
-										</div>
+									<div class="col kt-align-right">
+										<a href="javascript:;" id="kt_login_forgot" class="kt-login__link">Quên mật
+											khẩu</a>
 									</div>
-									<div class="kt-login__actions">
-										<button id="kt_login_signin_submit" class="btn btn-brand btn-pill kt-login__btn-primary">Đăng nhập</button>
-									</div>
-								</form>
-							</div>
-							<div class="kt-login__signup">
-								<div class="kt-login__head">
-									<h3 class="kt-login__title">Sign Up</h3>
-									<div class="kt-login__desc">Enter your details to create your account:</div>
 								</div>
-								<form class="kt-form" action="">
-									<div class="input-group">
-										<input class="form-control" type="text" placeholder="Fullname" name="fullname">
-									</div>
-									<div class="input-group">
-										<input class="form-control" type="text" placeholder="Email" name="email" autocomplete="off">
-									</div>
-									<div class="input-group">
-										<input class="form-control" type="password" placeholder="Password" name="password">
-									</div>
-									<div class="input-group">
-										<input class="form-control" type="password" placeholder="Confirm Password" name="rpassword">
-									</div>
-									<div class="row kt-login__extra">
-										<div class="col kt-align-left">
-											<label class="kt-checkbox">
-												<input type="checkbox" name="agree">I Agree the <a href="#" class="kt-link kt-login__link kt-font-bold">terms and conditions</a>.
-												<span></span>
-											</label>
-											<span class="form-text text-muted"></span>
-										</div>
-									</div>
-									<div class="kt-login__actions">
-										<button id="kt_login_signup_submit" class="btn btn-brand btn-pill kt-login__btn-primary">Sign Up</button>&nbsp;&nbsp;
-										<button id="kt_login_signup_cancel" class="btn btn-secondary btn-pill kt-login__btn-secondary">Cancel</button>
-									</div>
-								</form>
-							</div>
-							<div class="kt-login__forgot">
-								<div class="kt-login__head">
-									<h3 class="kt-login__title">Yêu cầu lấy lại mật khẩu</h3>
-									<div class="kt-login__desc">Nhập địa chỉ email để lấy lại mật khẩu:</div>
+								<div class="kt-login__actions">
+									<button id="kt_login_signin_submit"
+										class="btn btn-brand btn-pill kt-login__btn-primary">Đăng nhập</button>
 								</div>
-								<form class="kt-form" action="">
-									<div class="input-group">
-										<input class="form-control" type="text" placeholder="Email" name="email" id="kt_email" autocomplete="off">
-									</div>
-									<div class="kt-login__actions">
-										<button id="kt_login_forgot_submit" class="btn btn-brand btn-pill kt-login__btn-primary">Gửi yêu cầu</button>&nbsp;&nbsp;
-										<button id="kt_login_forgot_cancel" class="btn btn-secondary btn-pill kt-login__btn-secondary">Hủy</button>
-									</div>
-								</form>
+							</form>
+							<!--begin::Divider-->
+							<div class="kt-login__divider" style="margin: 1rem 0 2rem 0; ">
+								<div class="kt-divider">
+									<span></span>
+									<span>OR</span>
+									<span></span>
+								</div>
 							</div>
-							<!-- <div class="kt-login__account">
+
+							<!--end::Divider-->
+							<!--begin::Options-->
+							<div class="kt-login__options" style="justify-content: center;display: flex;">
+								<!-- <a href="#" class="btn btn-primary kt-btn">
+									<i class="fab fa-facebook-f"></i>
+									Facebook
+								</a>
+								<a href="#" class="btn btn-info kt-btn">
+									<i class="fab fa-twitter"></i>
+									Twitter
+								</a> -->
+								<a href="#" class="btn btn-primary kt-btn">
+									<i class="fab fa-google"></i>
+									Google
+								</a>
+							</div>
+
+							<!--end::Options-->
+						</div>
+						<div class="kt-login__signup">
+							<div class="kt-login__head">
+								<h3 class="kt-login__title">Sign Up</h3>
+								<div class="kt-login__desc">Enter your details to create your account:</div>
+							</div>
+							<form class="kt-form" action="">
+								<div class="input-group">
+									<input class="form-control" type="text" placeholder="Fullname" name="fullname">
+								</div>
+								<div class="input-group">
+									<input class="form-control" type="text" placeholder="Email" name="email"
+										autocomplete="off">
+								</div>
+								<div class="input-group">
+									<input class="form-control" type="password" placeholder="Password" name="password">
+								</div>
+								<div class="input-group">
+									<input class="form-control" type="password" placeholder="Confirm Password"
+										name="rpassword">
+								</div>
+								<div class="row kt-login__extra">
+									<div class="col kt-align-left">
+										<label class="kt-checkbox">
+											<input type="checkbox" name="agree">I Agree the <a href="#"
+												class="kt-link kt-login__link kt-font-bold">terms and conditions</a>.
+											<span></span>
+										</label>
+										<span class="form-text text-muted"></span>
+									</div>
+								</div>
+								<div class="kt-login__actions">
+									<button id="kt_login_signup_submit"
+										class="btn btn-brand btn-pill kt-login__btn-primary">Sign
+										Up</button>&nbsp;&nbsp;
+									<button id="kt_login_signup_cancel"
+										class="btn btn-secondary btn-pill kt-login__btn-secondary">Cancel</button>
+								</div>
+							</form>
+						</div>
+						<div class="kt-login__forgot">
+							<div class="kt-login__head">
+								<h3 class="kt-login__title">Yêu cầu lấy lại mật khẩu</h3>
+								<div class="kt-login__desc">Nhập địa chỉ email để lấy lại mật khẩu:</div>
+							</div>
+							<form class="kt-form" action="">
+								<div class="input-group">
+									<input class="form-control" type="text" placeholder="Email" name="email"
+										id="kt_email" autocomplete="off">
+								</div>
+								<div class="kt-login__actions">
+									<button id="kt_login_forgot_submit"
+										class="btn btn-brand btn-pill kt-login__btn-primary">Gửi yêu
+										cầu</button>&nbsp;&nbsp;
+									<button id="kt_login_forgot_cancel"
+										class="btn btn-secondary btn-pill kt-login__btn-secondary">Hủy</button>
+								</div>
+							</form>
+						</div>
+						<!-- <div class="kt-login__account">
 								<span class="kt-login__account-msg">
 									Don't have an account yet ?
 								</span>
 								&nbsp;&nbsp;
 								<a href="javascript:;" id="kt_login_signup" class="kt-login__account-link">Sign Up!</a>
 							</div> -->
-						</div>
 					</div>
 				</div>
 			</div>
 		</div>
+	</div>
 
-		<!-- end:: Page -->
+	<!-- end:: Page -->
 
-		<!-- begin::Global Config(global config for global JS sciprts) -->
-		<script>
-			var KTAppOptions = {
-				"colors": {
-					"state": {
-						"brand": "#5d78ff",
-						"dark": "#282a3c",
-						"light": "#ffffff",
-						"primary": "#5867dd",
-						"success": "#34bfa3",
-						"info": "#36a3f7",
-						"warning": "#ffb822",
-						"danger": "#fd3995"
-					},
-					"base": {
-						"label": [
-							"#c5cbe3",
-							"#a1a8c3",
-							"#3d4465",
-							"#3e4466"
-						],
-						"shape": [
-							"#f0f3ff",
-							"#d9dffa",
-							"#afb4d4",
-							"#646c9a"
-						]
-					}
+	<!-- begin::Global Config(global config for global JS sciprts) -->
+	<script>
+		var KTAppOptions = {
+			"colors": {
+				"state": {
+					"brand": "#5d78ff",
+					"dark": "#282a3c",
+					"light": "#ffffff",
+					"primary": "#5867dd",
+					"success": "#34bfa3",
+					"info": "#36a3f7",
+					"warning": "#ffb822",
+					"danger": "#fd3995"
+				},
+				"base": {
+					"label": [
+						"#c5cbe3",
+						"#a1a8c3",
+						"#3d4465",
+						"#3e4466"
+					],
+					"shape": [
+						"#f0f3ff",
+						"#d9dffa",
+						"#afb4d4",
+						"#646c9a"
+					]
 				}
-			};
-		</script>
+			}
+		};
+	</script>
 
-		<!-- end::Global Config -->
+	<!-- end::Global Config -->
 
-		<!--begin::Global Theme Bundle(used by all pages) -->
-		<script src="assets/plugins/global/plugins.bundle.js" type="text/javascript"></script>
-		<script src="assets/js/scripts.bundle.js" type="text/javascript"></script>
+	<!--begin::Global Theme Bundle(used by all pages) -->
+	<script src="assets/plugins/global/plugins.bundle.js" type="text/javascript"></script>
+	<script src="assets/js/scripts.bundle.js" type="text/javascript"></script>
 
-		<!--end::Global Theme Bundle -->
+	<!--end::Global Theme Bundle -->
 
-		<!--begin::Page Scripts(used by this page) -->
-		<script src="assets/js/login.js" type="text/javascript"></script>
-		<script src="assets/js/common.js" type="text/javascript"></script>
-		<!--end::Page Scripts -->
-	</body>
+	<!--begin::Page Scripts(used by this page) -->
+	<script src="assets/js/login.js" type="text/javascript"></script>
+	<script src="assets/js/common.js" type="text/javascript"></script>
+	<!--end::Page Scripts -->
+</body>
 
-	<!-- end::Body -->
+<!-- end::Body -->
+
 </html>
