update editable for expect money

--- a/src/main/resources/templates/transaction/edit/index.html
+++ b/src/main/resources/templates/transaction/edit/index.html
@@ -131,7 +131,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                             </div>
                                             <div class="col-lg-3">
                                                 <label>Tiền thủ thuật</label>
-                                                <input type="text" class="form-control material-input" readonly
+                                                <input type="text" class="form-control material-input money-input" 
                                                     id="expProcMoney">
                                             </div>
                                             <div class="col-lg-3">
@@ -142,7 +142,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                             </div>
                                             <div class="col-lg-3">
                                                 <label>Tiền thuốc</label>
-                                                <input type="text" class="form-control material-input" readonly
+                                                <input type="text" class="form-control material-input money-input" 
                                                     id="expMedicineMoney">
                                             </div>
 
