--- a/src/main/resources/templates/transaction/create/index.html
+++ b/src/main/resources/templates/transaction/create/index.html
@@ -130,7 +130,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                             </div>
                                             <div class="col-lg-3">
                                                 <label>Tiền thủ thuật</label>
-                                                <input type="text" class="form-control material-input" readonly
+                                                <input type="text" class="form-control material-input money-input" 
                                                     id="expProcMoney">
                                             </div>
                                             <div class="col-lg-3">
@@ -141,7 +141,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                             </div>
                                             <div class="col-lg-3">
                                                 <label>Tiền thuốc</label>
-                                                <input type="text" class="form-control material-input" readonly
+                                                <input type="text" class="form-control material-input money-input" 
                                                     id="expMedicineMoney">
                                             </div>
 
